<resources>
    <string name="app_name">Mini Mezun Uygulamasi</string>
    <string name="e_mail">E-Mail</string>
    <string name="ifre">Şifre</string>
    <string name="giri_yap">Giriş Yap</string>
    <string name="kay_t_ol">Kayıt Ol</string>
    <string name="isim">İsim</string>
    <string name="soy_isim">Soy İsim</string>
    <string name="giris_yili">Giriş Yılı</string>
    <string name="mezuniyet_yili">Mezuniyet Yılı</string>
    <string name="sifre">Şifre</string>
    <string name="kayit_ol">Kayıt OL</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="sosyal">Sosyal</string>
    <string name="ara">Ara</string>
    <string name="duyuru">Duyuru</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_image">Select Image</string>
    <string name="profilim">Profilim</string>

    <string-array name="education_levels">
        <item>Lisans</item>
        <item>Yüksek Lisans</item>
        <item>Doktora</item>
    </string-array>

    <string name="select_education_level">"Eğitim Düzeyini Seçin"</string>

</resources>