<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/bottom_nav_ic_sosyal"
        android:title="@string/sosyal"
        android:icon="@drawable/ic_foto"/>

    <item
        android:id="@+id/bottom_nav_ic_arama"
        android:title="@string/ara"
        android:icon="@drawable/ic_arama"/>

    <item
        android:id="@+id/bottom_nav_ic_duyuru"
        android:title="@string/duyuru"
        android:icon="@drawable/ic_duyuru"/>

    <item
        android:id="@+id/bottom_nav_ic_profil"
        android:title="@string/profil"
        android:icon="@drawable/ic_profil"/>
</menu>