<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:id="@+id/kayit_ol_linear"
    android:gravity="center"
    tools:context=".KayitOlActivity">

    <TextView
        android:layout_width="wrap_content"
        android:text="Kayıt Ol"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:layout_marginTop="30dp"
        android:id="@+id/kayit_ol_input_isim"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/kayit_ol_editIsim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/isim"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textColor="@color/KayitOlTextColor"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:boxCornerRadiusBottomEnd="10dp"
        android:id="@+id/kayit_ol_input_soy_isim"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/kayit_ol_editSoyIsim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/soy_isim"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textColor="@color/KayitOlTextColor"
            android:textSize="17sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:id="@+id/kayit_ol_input_email"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/kayit_ol_editEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:textColor="@color/KayitOlTextColor"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        app:boxCornerRadiusBottomEnd="10dp"
        android:id="@+id/kayit_ol_input_giris_yili"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/kayit_ol_editGirisYili"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/giris_yili"
            android:inputType="date"
            android:maxLength="4"
            android:textColor="@color/KayitOlTextColor"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:id="@+id/kayit_ol_input_mezuniyet_yili"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/kayit_ol_editMezuniyetYili"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mezuniyet_yili"
            android:inputType="date"
            android:maxLength="4"
            android:textColor="@color/KayitOlTextColor"
            android:textSize="17sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:id="@+id/kayit_ol_input_sifre"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/kayit_ol_editSifre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:maxLength="15"
            android:textColor="@color/KayitOlTextColor"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="btnKayitOl"
        android:text="@string/kayit_ol"
        android:textAllCaps="false"
        android:textSize="20sp" />


</LinearLayout>