<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".GirisYapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/giris_yap_linear"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:text="Giriş Yap"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:layout_marginTop="70dp"
        android:id="@+id/giris_yap_input_email"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/giris_yap_editEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:textColor="@color/KayitOlTextColor"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:id="@+id/giris_yap_input_sifre"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/giris_yap_editSifre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:maxLength="15"
            android:textColor="@color/KayitOlTextColor"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="btnGirisYap"
        android:text="@string/giris_yap"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="btnKayitOlGiris"
        android:text="@string/kayit_ol"
        android:textAllCaps="false"
        android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>